# VoidLemming

./: README.md  README.rst  VoigtFit Haro11.ipynb  VoigtFit.ipynb  pyproject.toml  requirements.txt
tests/: test_voidlemming.py
voidlemming/: LyaFitClasses.py  extin.py  lineprofiles.py  plotfunctions.py  spechelpers.py  voigt.py  voigtselector.py
voidlemming/data/: abslines_uv.py
