[tool.poetry]
name = "voidlemming"
version = "0.1.0"
description = ""
authors = ["Axel Runnholm <axel.runnholm@astro.su.se>"]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.2"
lmfit = "^1.0.1"
pandas = "^1.1.3"
matplotlib = "^3.3.2"
scipy = "^1.5.2"
astropy = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
